# neurocpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scalar_autograd.cpp
include/autodiff/: scalar_autodiff.h
src/: scalar_autodiff.cpp
tests/: legacy_scalar_autodiff.cpp  test_scalar.cpp
